updated footer styles with bolder links, spacing for social media icnons, fixed footr and login to incldue link back to home page withg ood spacing, fixed background photo so it covers whole page

--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -1,7 +1,14 @@
+.pageWrapper {
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 .registerArea {
     background-image: url("../images/Food/fish.jpg");
     background-size: cover;
-    height: 95vh;
+    height: 100vh;
     overflow-x: hidden;
     overflow-y: hidden;
 }
@@ -20,9 +27,4 @@
 
 .registerBox form > :nth-child(4) {
     margin-bottom: 30px;
-}
-
-.toLogin {
-    font-family: "Lato", sans-serif;
-    font-size: 18px;
 }
